discussion/jgit/163402/163402_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix InvalidInlineTag error flagged by error prone

Running recent error prone version complaining on that code:

RefDatabase.java:444: error: [InvalidInlineTag] Tag name `linkObjectId`
is unknown.
	 * Includes peeled {@linkObjectId}s. This is the inverse lookup of
	                   ^
    (see https://errorprone.info/bugpattern/InvalidInlineTag)

Bug: 562756
Change-Id: If91da51d5138fb753c0550eeeb9e3883a394123d
Signed-off-by: David Ostrovsky <david@ostrovsky.org>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: David Ostrovsky
Date: 2020-05-22 06:07:56.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-05-22 06:08:05.000000000
Message: 
Patch Set 1:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3164/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-05-22 06:48:50.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3164/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
